syntax = "proto3";

option go_package = "github.com/behnambm/todo/userservice"; // Don't forget to change!


// The User service definition.
service User {
  rpc GetUserByEmail (UserRequest) returns (UserReply) {}
}

// The request message containing the user's name.
message UserRequest {
  string email = 1;
}

// The response message containing the User
message UserReply {
  string name = 1;
  string email = 2;
  int64 id = 3;
  string password = 4;
}
